Replaced background + new content

--- a/src/OceanChart.css
+++ b/src/OceanChart.css
@@ -1,23 +1,7 @@
 .ocean-chart {
   width: inherit;
   display: flex;
-  flex-direction: column;
-}
-.bottom-img {
-  height: 100vh;
-}
-.firmamento {
-  position: absolute;
-  background-color: aqua;
-  height: 10vh;
-  width: 100%;
-  z-index: -1;
-}
-.abyss {
-  position: absolute;
-  background-image: linear-gradient(blueviolet, black);
-  top: 10vh;
-  height: 90vh;
-  width: 100%;
-  z-index: -1;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
 }
