--- a/src/MiddleModal.css
+++ b/src/MiddleModal.css
@@ -8,13 +8,13 @@
 }
 .modal-container {
   width: inherit;
-  background-color: darksalmon;
+  background-color: white;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
   padding-inline: 8%;
   padding-top: 35px;
-  border-style: groove;
+  border-style: solid;
   border-width: 4px;
   border-radius: 6px;
   border-color: white;
