--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -7,6 +7,7 @@ a {
 }
 .sidebar {
   display: grid;
+  padding-left: 5px;
 }
 .sidebar-list {
   display: flex;
@@ -18,8 +19,13 @@ a {
   list-style-type: none;
 }
 .sidebar-list-item {
-  background-color: bisque;
+  background-color: white;
   border-style: solid;
   border-width: 1px;
   border-color:gray;
+  border-radius: 15px;
+  text-align: center;
+  font-weight:bold;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 10px;
 }
