--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -27,5 +27,6 @@ a {
   text-align: center;
   font-weight:bold;
   font-family: Arial, Helvetica, sans-serif;
+  color: black;
   margin-top: 10px;
 }
